Fix mobile-menu not showing correctly & add padding to container for mobile UX

--- a/great-western-wine-theme/assets/scss/layouts/container/_container.scss
+++ b/great-western-wine-theme/assets/scss/layouts/container/_container.scss
@@ -7,7 +7,12 @@
     margin-left: auto;
     margin-right: auto;
     max-width: layout("max");
-    padding: 0;
+    padding: 0 10px;
     position: relative;
     width: layout("fixed");
+}
+
+.header-container {
+    @extend .container;
+    position: unset;
 }
